Add a bugfix to the release notes.
Sorry, my PR was old and before the reminder to add release notes in the commits of a PR.

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,1 +1,2 @@
 
+- bugfix: hide orders that have a created date listed in the future. (They no longer display under the "Today" section of an order list).
