Updated release notes

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,2 +1,3 @@
-- bugfix: Improved localization support on the charts in "My Store"
+- bugfix: Improved localization support on the charts
+- bugfix: Improved localization support on the "Orders" & "Notifications" screens
 - bugfix: Hide orders that have a created date listed in the future. (They no longer display under the "Today" section of an order list)
