--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -2,4 +2,5 @@
 - bugfix: Improved localization support on the charts in "My Store"
 
 - bugfix: hide orders that have a created date listed in the future. (They no longer display under the "Today" section of an order list).
-- Bugfix: remove the payment method summary in the payment section when the no payment has been received.
+- bugfix: remove the payment method summary in the payment section when the no payment has been received.
+- bugfix: logging out resets Zendesk username / email
