--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,3 +3,4 @@
 - bugfix: improved localization support on the Orders & Notifications screens
 - bugfix: hide orders that have a created date listed in the future. (They no longer display under the "Today" section of an order list).
 - Bugfix: remove the payment method summary in the payment section when the no payment has been received.
+- bugfix: display Taxes line to payment and product details, including when amount is zero.
