--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,3 +5,4 @@
 - bugfix: remove the payment method summary in the payment section when the no payment has been received.
 - bugfix: logging out resets Zendesk username / email
 - bugfix: display Taxes line to payment and product details, including when amount is zero.
+- bugfix: add help button to store picker screen
