--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,2 +1,3 @@
 - bugfix: add help button to store picker screen
 - bugfix: on the store picker, don't allow the tableview cell to be selected if there only is a single store
+- new feature: application logs. Share your application logs for support purposes.
