Update metadata strings

--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -47,14 +47,14 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v1.0-whats-new"
+msgctxt "v1.1-whats-new"
 msgid ""
-"With the WooCommerce mobile app, you’ve got your online store in your pocket: manage orders, receive sales notifications, and view key metrics on the go.\n"
-"\n"
-"Drumroll, please: it’s our very first public release! We’re looking forward to iterating early and often and we can’t wait to hear your feedback and improvement suggestions.\n"
-"Get in touch via “Support” in the app or at ideas.woocommerce.com.\n"
-"\n"
-"Thank you to everyone involved in development and early testing!\n"
+"- This update is all about improved reliability and fixes:\n"
+"- Improved localization support on My Store charts and on the Orders & Notifications screens.\n"
+"- The app now hides orders that have a created date listed in the future. (They no longer display under the “Today” section of an order list.)\n"
+"- We’ve removed the payment method summary in the payment section when no payment has been received.\n"
+"- Taxes line is now shown in payments and product details even when the amount to show is zero.\n"
+"- When logging out, the app now resets the credential used with support requests.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
